objects/MustSpecify__c.object
<CustomObject>
    <fields>
        <fullName>MustField1__c</fullName>
        <label>MustField1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MustField2__c</fullName>
        <label>MustField2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MustSpecify3__c</fullName>
        <label>MustSpecify3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MustSpecify</label>
    <nameField>
        <label>MustSpecify Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MustSpecifies</pluralLabel>
    <recordTypes>
        <fullName>Must_Specify_Record</fullName>
        <active>true</active>
        <label>Must Specify Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>